# copernicus-seasonal-forecast-tools

./: .gitignore  .readthedocs.yml  DS_Store  MANIFEST.in   README.md  docs_environment.yml  environment.yml  paper.bib  paper.md  pyproject.toml  requirements.txt
copernicus_seasonal_forecast_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  environment.yml  make.bat  requirements.txt
docs/source/: cds_api.rst  citing.rst  climada_hazard_copernicus_forecast.ipynb  conf.py  index.rst  modules.rst
docs/source/_static/: custom.css
docs/source/autoapi/: index.rst
docs/source/autoapi/seasonal_forecast_tools/: index.rst
docs/source/autoapi/seasonal_forecast_tools/config/: index.rst
docs/source/autoapi/seasonal_forecast_tools/coordinates_utils/: index.rst
docs/source/autoapi/seasonal_forecast_tools/core/: index.rst
docs/source/autoapi/seasonal_forecast_tools/create_seasonal_forecast_hazard/: index.rst
docs/source/autoapi/seasonal_forecast_tools/data/: index.rst
docs/source/autoapi/seasonal_forecast_tools/downloader/: index.rst
notebooks/: DEMO_copernicus_seasonal_forecast.ipynb
seasonal_forecast_tools/: DEMO_copernicus_seasonal_forecast.ipynb  climada_hazard_copernicus_forecast.ipynb  create_seasonal_forecast_hazard.py  downloader.py  seasonal_statistics.py
seasonal_forecast_tools/core/: __init__.py  create_seasonal_forecast_hazard.py  heat_index.py  seasonal_forecast.py
test/: test_create_seasonal_forecast_hazard.py  test_integration_forecast_to_hazard.py  test_seasonal_statistics.py
(+25 files in other folders)
